--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>WebStudio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:ital,wght@0,500;0,700;0,900;1,400&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&amp;family=Roboto:wght@400;500;700;900&amp;display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
         integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -336,8 +338,8 @@
     </main>
     <footer class="footer">
         <div class="container">
-            <ul class="footer-list">
-                <li class="footer-address">
+            <div class="footer-list">
+                <div class="footer-address">
                     <a class="logo ft-logo" href="./index.html"><span class="logo-col">Web</span>Studio
                         <!-- <img src="./images/logo.svg" alt="Логотип компании"> -->
                     </a>
@@ -354,8 +356,8 @@
                             </li>
                         </ul>
                     </address>
-                </li>
-                <li class="footer-social">
+                </div>
+                <div class="footer-social">
                     <h2 class="footer-title">присоединяйтесь</h2>
                     <ul class="social-list-footer">
                         <li class="social-item-footer">
@@ -387,8 +389,8 @@
                             </a>
                         </li>
                     </ul>
-                </li>
-                <li class="footer-subscribe">
+                </div>
+                <div class="footer-subscribe">
                     <h2 class="footer-title">Подпишитесь на рассылку</h2>
                     <form action="" class="footer-form" autocomplete="off">
                         <label for="footer-input" class=".visually-hidden"></label>
@@ -399,8 +401,8 @@
                         </svg>
                         </button>
                     </form>
-                </li>
-            </ul>
+                </div>
+            </div>
         </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
@@ -408,44 +410,43 @@
             <p class="modal-text">Оставьте свои данные, мы вам перезвоним</p>
             <form action="" autocomplete="off">
                 <label class="lable">Имя
-                    <div class="lable-box">
+                    <span class="lable-box">
                         <input type="text" class="input" name="name">
                         <svg class="icon-name">
                             <use href="./images/icon-sprite.svg#icon-name"></use>
                         </svg>
-                    </div>                   
-                </label>
+                    </span>
+                </label>                
                 <label class="lable">Телефон
-                    <div class="lable-box">
+                    <span class="lable-box">
                         <input type="tel" class="input" name="tel">
                         <svg class="icon-name">
                             <use href="./images/icon-sprite.svg#icon-tel"></use>
                         </svg>
-                    </div>              
+                    </span>              
                 </label>
                 <label class="lable">Почта
-                    <div class="lable-box">
+                    <span class="lable-box">
                         <input type="email" class="input" name="e-mail">
                         <svg class="icon-name">
                             <use href="./images/icon-sprite.svg#icon-email"></use>
                         </svg>
-                    </div>
+                    </span>
                 </label>
-                <label class="lable">Комментарий
-                    <textarea name="commet" class="input textarea"  placeholder="Введите текст"></textarea>
+                <label class="lable lable-comment">Комментарий
+                    <textarea name="comment" class="input textarea"  placeholder="Введите текст"></textarea>
                 </label>
                 <label class="checkbox-lable">
                     <input type="checkbox" class="visually-hidden checkbox" name="policy">
-                    <div class="checkbox-input">
+                    <span class="checkbox-input">
                         <svg class="icon-checkbox">
                             <use href="./images/icon-sprite.svg#icon-checkbox"></use>
                         </svg>
-                    </div>
+                    </span>
                     Соглашаюсь с рассылкой и принимаю <a href="" class="policy">Условия договора</a>
                 </label>
                 <button type="submit" class="btn btn-modal">Отправить</button>
             </form>
-            
             <button class="modal-close" type="button" data-modal-close>
                 <svg class="icon-modal">
                     <use href="./images/icon-sprite.svg#icon-close"></use>
